--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash": "^4.13.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
-    "passport-google-oauth20": "^1.0.0"
+    "passport-google-oauth20": "^1.0.0",
+    "sass-font-face": "^1.0.1"
   }
 }
